# automatic-transmission

./: .gitignore  .gitlab-ci.yml  .~lock.show_feed_df.csv#  CLAUDE.md  README.md  changelog.md  doc.txt  env_template.env  environments.yaml  main.py  pyproject.toml  pytest.ini  readme.md  requirements.in  requirements.txt  show_feed_df.csv  test.env
.bak/: OMBb_tv_response.json  entries.json  move_feed.json  movie_df.csv  movie_feed.json  omdb_movie_data.json  omdb_tv_data.json  show_feed.json  tv_shows.csv
app/: main.py
config/: filter-parameters.json  filter-parameters.yaml  filter_parameters.json  parameters.json  string-special-conditions  string-special-conditions.yaml
containerization/: README.md  docker-compose.yml  dockerfile.00_base  dockerfile.01_rss_ingest  dockerfile.02_collect  dockerfile.03_parse  dockerfile.04_file_filtration  dockerfile.05_metadata_collection  dockerfile.06_media_filtration  dockerfile.07_initiation  dockerfile.08_download_check  dockerfile.09_transfer  dockerfile.10_cleanup  readme.md
data/: show_feed.json  tv_shows.csv  tv_shows.pkl
dbt/: dbt.py
dbt_profiles/: profiles.yml
dev/: test.py  test.sql  test_sql.py
docs/: data-flow.md
services/: metadata_collection.py  rss_ingest.py  torrent_cleanup.py  torrent_initiation.py
sql/: _00_instantiate-schema.sql  _01_instantiate_training.sql  back-up-create.sql  back-up-push.sql  bak.sql  instantiate-schema.sql
ssh_functions/: __init.py__.py  sshf.py
templates/: .env  env_template.env  movies.pkl  template_parameters.json  tv_shows.pkl  tv_shows_template.pkl
(+76 files in other folders)
